--- a/index.html
+++ b/index.html
@@ -106,10 +106,52 @@
     <div class="ad">
         <div class="container">
             <img src="./img/nav-ad.jpg" alt="">
-        <i id="ad-close">X</i>
+            <i id="ad-close">X</i>
         </div>
     </div>
-
+    <!-- 搜索框 -->
+    <div class="search">
+       <div class="container">
+        <a href="https://www.jd.com"><img src="./img/jdlogo-201708-@1x.png" alt=""></a>
+       <span class="search-book">
+           <b>图书</b>
+           <a href="javascript:;" id="xl2">全部分类</a>
+           <!-- 下拉 -->
+           <div class="search-book-xiala">
+               <p><a href="javascript:;">家用电器</a></p>
+               <p><a href="javascript:;">手机</a>、<a href="javascript:;">运营商</a>、
+                <a href="javascript:;">数码</a></p>
+               <p><a href="javascript:;">电脑</a>、<a href="javascript:;">办公</a></p>
+               <p><a href="javascript:;">家居</a>、<a href="javascript:;">家具</a>、
+                <a href="javascript:;">家装</a>、<a href="javascript:;">厨具</a></p>
+               <p><a href="javascript:;">男装</a>、<a href="javascript:;">女装</a>、
+                <a href="javascript:;">童装</a>、<a href="javascript:;">内衣</a></p>
+               <p><a href="javascript:;">美妆</a>、<a href="javascript:;">个护清洁</a>、<a href="javascript:;">宠物</a></p>
+               <p><a href="javascript:;">女鞋</a>、<a href="javascript:;">箱包</a>、
+                <a href="javascript:;">钟表</a>、<a href="javascript:;">珠宝</a></p>
+               <p><a href="javascript:;">男鞋</a>、<a href="javascript:;">运动</a>、<a href="javascript:;">户外</a></p>
+               <p><a href="javascript:;">房产</a>、<a href="javascript:;">汽车</a>、
+                <a href="javascript:;">汽车用品</a></p>
+               <p><a href="javascript:;">母婴</a>、<a href="javascript:;">玩具乐融</a></p>
+               <p><a href="javascript:;">食品</a>、<a href="javascript:;">酒类</a>、
+                <a href="javascript:;">生鲜</a>、<a href="javascript:;">特产</a></p>
+               <p><a href="javascript:;">艺术</a>、<a href="javascript:;">礼品鲜花</a>、
+                <a href="javascript:;">农资绿植</a></p>
+               <p><a href="javascript:;">医药保健</a>、<a href="javascript:;">计生情趣</a></p>
+               <p><a href="javascript:;">图书</a>、<a href="javascript:;">文娱</a>、
+                <a href="javascript:;">教育</a>、<a href="javascript:;">电子书</a></p>
+               <p><a href="javascript:;">机票</a>、<a href="javascript:;">酒店</a>、
+                <a href="javascript:;">旅游</a>、<a href="javascript:;">生活</a></p>
+               <p><a href="javascript:;">理财</a>、<a href="javascript:;">众筹</a>、
+                <a href="javascript:;">白条</a>、<a href="javascript:;">保险</a></p>
+               <p><a href="javascript:;">安装</a>、<a href="javascript:;">维修</a>、
+                <a href="javascript:;">清洗</a>、<a href="javascript:;">二手</a></p>
+               <p><a href="javascript:;">工业品</a></p>
+           </div>
+       </span>
+    
+    </div>
+    </div>
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
