--- a/index.html
+++ b/index.html
@@ -2101,7 +2101,53 @@
             </div>
                </div>
         </div>
+      
     </main>
+    <div class="shoufengqin">
+        <div class="container">
+              <!-- 手风琴 -->
+          <div class="box">
+              <ul>
+                  <li class="on">
+                      <a href="#">
+                          <h3>IT科技 好书柜惠</h3>
+                          <p>每满100减50</p>
+                          <img src="./img/fengqin-1.webp" alt="img">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <h3>万种童书</h3>
+                          <p>每满100减50</p>
+                          <img src="./img/fengqin-2.webp" alt="img">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <h3>文学小说</h3>
+                          <p>每满100减50</p>
+                          <img src="./img/fengqin-3.webp" alt="img">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <h3>精选好书</h3>
+                          <p>跨店每满99减30</p>
+                          <img src="./img/fengqin-4.webp" alt="img">
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#">
+                          <h3>京东读书</h3>
+                          <p>一件5折 两件4折</p>
+                          <img src="./img/fengqin-5.webp" alt="img">
+                      </a>
+                  </li>
+                  <div style="clear: both"></div>
+              </ul>
+    </div>
+        </div>
+    </div>
     <script src="./js/jquery-3.4.1.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
