--- a/knowledge.html
+++ b/knowledge.html
@@ -367,13 +367,17 @@
                         <span class="span_list">斗鱼旗舰店</span>
                     </div>
                 </div>
-            </div>
+            </div>  
         </div>
     </div>
     <!-- 主体内容部分 -->
     <main>
         <div class="k">
-            
+            <!-- 每日精选 -->
+           <div class="jingxuan">
+            <h2>每日精选</h2>
+            <img src="./images/k-bankuai-1.png" alt="">
+           </div>
         </div>
     </main>
     <script src="./lib/jquery-3.4.1.min.js"></script>
