--- a/knowledge.html
+++ b/knowledge.html
@@ -161,17 +161,17 @@
     </div>
     <!-- nav -->
     <div class="carousel-content-tittle">
-       <div class="k">
-        <h2>知识服务</h2>
-        <a href="" class="carousel-content-tittle-1">数字内容</a>
-        <a href="" class="carousel-content-tittle-2">图书首页</a>
-        <a href="" class="carousel-content-tittle-3">知识服务</a>
-       </div>
+        <div class="k">
+            <h2>知识服务</h2>
+            <a href="" class="carousel-content-tittle-1">数字内容</a>
+            <a href="" class="carousel-content-tittle-2">图书首页</a>
+            <a href="" class="carousel-content-tittle-3">知识服务</a>
+        </div>
     </div>
     <div class="carousel">
         <div class="k">
             <div class="carousel-left">
-                
+
                 <ul class="carousel-left-content">
                     <li>
                         <h3>人在职场</h3>
@@ -339,7 +339,7 @@
             </div>
             <!-- 轮播图内容 -->
             <div class="carousel-content">
-             
+
                 <!-- lunbotu -->
                 <div class="fenlei-center-lunbo clearfix">
                     <ul class="slider  clearfix">
@@ -353,7 +353,7 @@
                     </ul>
                     <!-- 左右键 -->
                     <div class="left_click">
-                        <</div>
+                        << /div>
                             <div class="right_click">></div>
                     </div>
                     <!-- 小圆点 -->
@@ -367,17 +367,35 @@
                         <span class="span_list">斗鱼旗舰店</span>
                     </div>
                 </div>
-            </div>  
+            </div>
         </div>
     </div>
     <!-- 主体内容部分 -->
     <main>
         <div class="k">
             <!-- 每日精选 -->
-           <div class="jingxuan">
-            <h2>每日精选</h2>
-            <img src="./images/k-bankuai-1.png" alt="">
-           </div>
+            <div class="jingxuan">
+                <h2>每日精选</h2>
+                <img src="./images/k-bankuai-1.png" alt="">
+                <span class="left"><</span>
+                        <span class="right">></span>
+            </div>
+            <!-- 新品推荐 -->
+            <div class="tuijian">
+                <h2>新品推荐</h2>
+                <img src="./images/k-bankuai-2.png" alt="">
+                <span class="left"><</span>
+                        <span class="right">></span>
+            </div>
+            <!-- 店铺精选 -->
+            <div class="dianpu">
+                <h2>店铺精选<span>HOT推荐</span></h2>
+                <ul>
+                    <li><img src="./images/k-dianpujingxuan-1.png" alt=""></li>
+                    <li><img src="./images/k-dianpujingxuan-2.png" alt=""></li>
+                    <li><img src="./images/k-dianpujingxuan-3.png" alt=""></li>
+                </ul>
+            </div>
         </div>
     </main>
     <script src="./lib/jquery-3.4.1.min.js"></script>
