--- a/knowledge.html
+++ b/knowledge.html
@@ -367,7 +367,7 @@
                         <span class="span_list">斗鱼旗舰店</span>
                     </div>
                 </div>
-            </div>
+            </div> 
         </div>
     </div>
     <!-- 主体内容部分 -->
@@ -396,6 +396,12 @@
                     <li><img src="./images/k-dianpujingxuan-3.png" alt=""></li>
                 </ul>
             </div>
+            <!-- 大咖专区 -->
+           <div class="daka">
+            <h2>大咖专区<span>人气推荐</span></h2>
+            <img src="./images/k-daka.png" alt="">
+           </div>
+           
         </div>
     </main>
     <script src="./lib/jquery-3.4.1.min.js"></script>
